[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/img/Repeating-Triangles.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Text.gd" type="Script" id=3]
[ext_resource path="res://Assets/img/left.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Image.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Image.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Back.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.109804, 0.109804, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=3]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Sejarah" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 1126.26 ]
}

[node name="BG2" type="Sprite" parent="."]
modulate = Color( 0.615686, 0.0666667, 0.0666667, 1 )
position = Vector2( 533.228, 527.104 )
scale = Vector2( 4.35665, 5.41391 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 9.90906
margin_top = 639.822
margin_right = 560.909
margin_bottom = 915.822
focus_next = NodePath("../ColorRect")
color = Color( 0.701961, 0.415686, 0.415686, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 13.4447
margin_top = 644.546
margin_right = 557.445
margin_bottom = 910.546
color = Color( 0.427451, 0.176471, 0.176471, 1 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 56.8182
margin_top = 686.638
margin_right = 517.818
margin_bottom = 865.638
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_following = true
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Button" type="Button" parent="."]
editor/display_folded = true
margin_left = 30.0
margin_top = 937.7
margin_right = 174.0
margin_bottom = 1002.7
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 66.1583, 31.9502 )
scale = Vector2( 0.116624, 0.1 )
texture = ExtResource( 4 )

[node name="Button2" type="Button" parent="."]
editor/display_folded = true
margin_left = 395.0
margin_top = 937.7
margin_right = 539.0
margin_bottom = 1002.7
custom_styles/normal = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Button2"]
position = Vector2( 76.1582, 31.9502 )
rotation = 3.14159
scale = Vector2( 0.116624, 0.1 )
texture = ExtResource( 4 )

[node name="Image" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )

[node name="Back" parent="." instance=ExtResource( 7 )]
[connection signal="timeout" from="Timer" to="Text" method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="Text" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="Text" method="_on_Button2_pressed"]
